fix(menu): colored active items were not displayed colored
Colored active items in colored menus were not displayed colored because of too low specificity

--- a/src/definitions/collections/menu.less
+++ b/src/definitions/collections/menu.less
@@ -1343,7 +1343,7 @@ each(@colors, {
   @c: @colors[@@color][color];
 
   & when not (@color=secondary) {
-    .ui.ui.menu .@{color}.active.item,
+    .ui.ui.ui.menu .@{color}.active.item,
     .ui.ui.@{color}.menu .active.item:hover,
     .ui.ui.@{color}.menu .active.item {
       & when not (@secondaryPointingActiveBorderColor = currentColor) {
@@ -1485,7 +1485,7 @@ each(@colors, {
     @h: @colors[@@color][hover];
 
     & when not (@color=secondary) {
-      .ui.ui.inverted.menu .@{color}.active.item,
+      .ui.ui.ui.inverted.menu .@{color}.active.item,
       .ui.ui.inverted.@{color}.menu {
         background-color: @c;
       }
